--- a/.github/workflows/deployAction.yml
+++ b/.github/workflows/deployAction.yml
@@ -14,6 +14,6 @@ jobs:
           password: ${{ secrets.WABLI_SERVER_SSH_PASSWORD }}
           port: ${{ secrets.WABLI_SERVER_SSH_PORT }}
           script: >-
-            ./wabli-applications/deploy.sh -b main -d local-host -r
+            ./wabli-applications/deploy.sh -b main -d solid-spoon -r
             https://github.com/wabliplatform/60e2b24167874667d9233b94-server-testjavascript.git
-            -f 60e2b24167874667d9233b94-server-testjavascript -p 8090
+            -f 60e2b24167874667d9233b94-server-testjavascript -p 3011
